[gd_scene load_steps=3 format=2]

[ext_resource path="res://dynamicFont/regular.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/weldaan/settingPanel.gd" type="Script" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -189.0
margin_right = 301.0
margin_bottom = 189.0

[node name="Label" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -56.0
margin_top = -168.0
margin_right = 64.0
margin_bottom = -150.0
custom_fonts/font = ExtResource( 1 )
text = "Setting"
align = 1
valign = 1

[node name="ColorRect" type="ColorRect" parent="Panel/Label"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 37.0
margin_top = 18.0
margin_right = -36.0
margin_bottom = 1.0

[node name="ScrollContainer" type="ScrollContainer" parent="Panel"]
margin_left = 76.0
margin_top = 64.0
margin_right = 565.0
margin_bottom = 307.0
scroll_horizontal_enabled = false

[node name="VBoxContainer2" type="VBoxContainer" parent="Panel/ScrollContainer"]
margin_right = 489.0
margin_bottom = 243.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 20

[node name="VBoxContainer3" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2"]
margin_right = 489.0
margin_bottom = 126.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3"]
margin_right = 489.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Grid setting"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3"]
margin_top = 28.0
margin_right = 489.0
margin_bottom = 126.0

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
margin_right = 50.0
margin_bottom = 98.0
rect_min_size = Vector2( 50, 0 )

[node name="ColorRect" type="ColorRect" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
margin_left = 54.0
margin_right = 56.0
margin_bottom = 98.0
rect_min_size = Vector2( 2, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer"]
margin_left = 60.0
margin_right = 489.0
margin_bottom = 98.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_right = 429.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control"]
anchor_bottom = 1.0
margin_right = 92.0
text = "Dynamic Grid "
valign = 1

[node name="dynamicGrid" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control"]
margin_left = 95.0
margin_top = -4.0
margin_right = 171.0
margin_bottom = 36.0
focus_mode = 0
enabled_focus_mode = 0
expand_icon = true

[node name="Control2" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 429.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control2"]
anchor_bottom = 1.0
margin_right = 92.0
text = "Grid main color"
valign = 1

[node name="gridMainColor" type="ColorPickerButton" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 5.0
margin_right = -83.0
margin_bottom = -5.0
focus_mode = 0
enabled_focus_mode = 0

[node name="Control3" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer"]
margin_top = 68.0
margin_right = 429.0
margin_bottom = 98.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control3"]
anchor_bottom = 1.0
margin_right = 92.0
text = "Grid sub color"
valign = 1

[node name="gridSubColor" type="ColorPickerButton" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control3"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 144.0
margin_top = 5.0
margin_right = -83.0
margin_bottom = -5.0
focus_mode = 0
enabled_focus_mode = 0

[node name="VBoxContainer4" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2"]
margin_top = 146.0
margin_right = 489.0
margin_bottom = 204.0
custom_constants/separation = 10

[node name="Label2" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4"]
margin_right = 489.0
margin_bottom = 18.0
custom_fonts/font = ExtResource( 1 )
text = "Keycast"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4"]
margin_top = 28.0
margin_right = 489.0
margin_bottom = 58.0

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer"]
margin_right = 50.0
margin_bottom = 30.0
rect_min_size = Vector2( 50, 0 )

[node name="ColorRect" type="ColorRect" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer"]
margin_left = 54.0
margin_right = 56.0
margin_bottom = 30.0
rect_min_size = Vector2( 2, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer"]
margin_left = 60.0
margin_right = 489.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="Control" type="Control" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer/VBoxContainer"]
margin_right = 429.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="Label" type="Label" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer/VBoxContainer/Control"]
anchor_bottom = 1.0
margin_right = 92.0
text = "show Keycast"
valign = 1

[node name="CheckButton" type="CheckButton" parent="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer/VBoxContainer/Control"]
margin_left = 95.0
margin_top = -4.0
margin_right = 171.0
margin_bottom = 36.0
focus_mode = 0
enabled_focus_mode = 0
expand_icon = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -118.0
margin_top = 120.0
margin_right = 118.0
margin_bottom = 144.0
custom_constants/separation = 20

[node name="apply" type="Button" parent="HBoxContainer"]
margin_right = 108.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "apply"

[node name="cancel" type="Button" parent="HBoxContainer"]
margin_left = 128.0
margin_right = 236.0
margin_bottom = 24.0
focus_mode = 0
size_flags_horizontal = 3
enabled_focus_mode = 0
text = "cancel"

[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control/dynamicGrid" to="." method="_on_dynamicGrid_pressed"]
[connection signal="toggled" from="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control/dynamicGrid" to="." method="_on_dynamicGrid_toggled"]
[connection signal="color_changed" from="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control2/gridMainColor" to="." method="_on_gridMainColor_color_changed"]
[connection signal="color_changed" from="Panel/ScrollContainer/VBoxContainer2/VBoxContainer3/HBoxContainer/VBoxContainer/Control3/gridSubColor" to="." method="_on_gridSubColor_color_changed"]
[connection signal="pressed" from="Panel/ScrollContainer/VBoxContainer2/VBoxContainer4/HBoxContainer/VBoxContainer/Control/CheckButton" to="." method="_on_CheckButton_pressed"]
[connection signal="pressed" from="HBoxContainer/apply" to="." method="apply"]
[connection signal="pressed" from="HBoxContainer/cancel" to="." method="cancel"]
